Fix T37302: cycles slow hair export with many hairs, especially on Windows.